--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 MONGO_DB=mongodb://localhost:27017/hello-world
+
+DB_TYPE=myqql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USERNAME=root
+MYSQL_PASSWORD=aBCD@123456789
+MYSQL_DATABASE=helloworld
