--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 MONGO_DB=mongodb://localhost:27017/hello-world
 
+ENV=development
 DB_TYPE=myqql
+DB_DIALECT=mysql
+DB_CHARSET=utf8mb4
+DB_COLLATE=utf8mb4_unicode_ci
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USERNAME=root
