--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_COLLATE=utf8mb4_unicode_ci
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USERNAME=root
-MYSQL_PASSWORD=aBCD@123456789
+MYSQL_PASSWORD=Abcd@123456789
 MYSQL_DATABASE=helloworld
 
 
@@ -19,4 +19,5 @@ MYSQL_DATABASE=helloworld
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:Abcd@123456789@localhost:5432/nest?schema=public"
+SECRET_KEY_JWT="secret key"
