--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,12 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: Abcd@123456789
       POSTGRES_DB: nest
+  
+  test-db:
+    image: postgres:latest
+    ports:
+      - 5433:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Abcd@123456789
+      POSTGRES_DB: nest-test
