--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "class-validator": "^0.14.0",
     "mongoose": "^7.0.3",
     "mysql2": "^3.2.0",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12",
+    "typeorm": "^0.0.11",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
